--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,26 +1,80 @@
 {% load staticfiles %}
 <html>
-<head>
-  <title>kiwich site | Моя личная страничка</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
-  <link rel="stylesheet" href="{% static 'css/kiwich.css' %}">
-</head>
-<body>
-    <div class="page-header">
-        <h1><a href="/">Django Girls Blog</a></h1>
+    <head>
+        <title>Личный блог | Kiwich</title>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
+            <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+            <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css">
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+    <div class="container">
+    <div class="zg">
+        <center><a href="index/"><div class="zgtxt">Kiwich's blog</div></a></center>
+        <!--<center><img src="/static/11.png" alt="Пека"></center>-->
     </div>
-    <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
-            {% block content %}
-            {% endblock %}
-            </div>
+    <div class="row">
+    <div class="col-md-3 col-sm-6">
+    {% for post in posts %}
+    <div>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <td class="tlt"><a style="color: #F2F2F2;" href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></td>
+                </tr>
+            </thead>
+        <tbody>
+        <tr>
+        <th>
+        <p><div>{{ post.text|linebreaksbr }}</div></p></th></tr>
+        </tbody>
+        <tr><td class="dt">Опубликовано: {{ post.published_date }}</td></tr>
+        <br>
+        </table>
+    </div>
+    {% endfor %}
+    </div>
+    <br>
+    <div class="col-md-3 col-sm-6 col-lg-6">
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <td class="tlt">О владельце блога</td>
+                </tr>
+            </thead>
+        <tbody>
+        <tr>
+        <td>Меня зовут Максим и я являюсь участником хакатона от СФ БГУ.<br>Этот блог - мой первый опыт работы с Python и Django.</td></tr>
+        </tbody>
+        </table>
         </div>
-    </div>
-</body>
+        </div>
+        <!------------------------------------------------------------------->
+    <div class="col-md-3 col-sm-6 col-lg-3">
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <td class="tlt">Меню</td>
+                </tr>
+            </thead>
+        <tbody>
+        <tr>
+        <td>
+        <center><a href="{% url 'post_new' %}"><span class="glyphicon glyphicon-plus"></span>Добавить пост</a></center>
+        <center><a href="admin/"><span class="glyphicon glyphicon-cog"></span>Админ - панель</a></td></tr></center>
+        </tbody>
+        </table>
+        </div>
+        </div>
+        </div>
+        <center><div class="tlt">2017</div></center>
+        </div>
+    </body>
 </html>
