--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,7 @@
 <html>
-    <head></head>
+    <head>
+        Страница в разработке
+    </head>
     <body>
     <div class="post">
         {% if post.published_date %}
