--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -15,11 +15,8 @@
     <body>
     <div class="container">
     <div class="zg">
-
         <center><a href="index/"><div class="zgtxt">Kiwich's blog</div></a></center>
-        <center><img src="/static/11.png" alt="Пека"></center>
-        <center><a href="{% url 'post_new' %}">Добавить пост</a></center>
-        <center><a href="admin/">Админ - панель</a></center>
+        <!--<center><img src="/static/11.png" alt="Пека"></center>-->
     </div>
     <div class="row">
     <div class="col-md-3 col-sm-6">
@@ -28,7 +25,7 @@
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
-                    <td class="tlt"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></td>
+                    <td class="tlt"><a style="color: #F2F2F2;" href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></td>
                 </tr>
             </thead>
         <tbody>
@@ -43,7 +40,7 @@
     {% endfor %}
     </div>
     <br>
-    <div class="col-md-3 col-sm-6 col-lg-9">
+    <div class="col-md-3 col-sm-6 col-lg-6">
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <thead>
@@ -58,10 +55,26 @@
         </table>
         </div>
         </div>
+        <!------------------------------------------------------------------->
+    <div class="col-md-3 col-sm-6 col-lg-3">
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <td class="tlt">Меню</td>
+                </tr>
+            </thead>
+        <tbody>
+        <tr>
+        <td>
+        <center><a href="{% url 'post_new' %}"><span class="glyphicon glyphicon-plus"></span>Добавить пост</a></center>
+        <center><a href="admin/"><span class="glyphicon glyphicon-cog"></span>Админ - панель</a></td></tr></center>
+        </tbody>
+        </table>
         </div>
-
+        </div>
+        </div>
         <center><div class="tlt">2017</div></center>
-
         </div>
     </body>
 </html>
