--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,64 +15,16 @@
     <body>
     <div class="container">
     <div class="zg">
-        <center><a href="index/"><div class="zgtxt">Kiwich's blog</div></a></center>
+        <center><a href="/"><div class="zgtxt">Kiwich's blog</div></a></center>
+       {% if user.is_authenticated %}<center><div class="tlt">Привет, {{ user.username }}!</div></center>{% else %}<center><div class="tlt">Привет, аноним!</div></center>{% endif %}
         <!--<center><img src="/static/11.png" alt="Пека"></center>-->
     </div>
     <div class="row">
     <div class="col-md-3 col-sm-6">
-    {% for post in posts %}
-    <div>
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <td class="tlt"><a style="color: #F2F2F2;" href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></td>
-                </tr>
-            </thead>
-        <tbody>
-        <tr>
-        <th>
-        <p><div>{{ post.text|linebreaksbr }}</div></p></th></tr>
-        </tbody>
-        <tr><td class="dt">Опубликовано: {{ post.published_date }}</td></tr>
-        <br>
-        </table>
-    </div>
-    {% endfor %}
+            {% block content %}
+            {% endblock %}
     </div>
     <br>
-    <div class="col-md-3 col-sm-6 col-lg-6">
-    <div class="table-responsive">
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <td class="tlt">О владельце блога</td>
-                </tr>
-            </thead>
-        <tbody>
-        <tr>
-        <td>Меня зовут Максим и я являюсь участником хакатона от СФ БГУ.<br>Этот блог - мой первый опыт работы с Python и Django.</td></tr>
-        </tbody>
-        </table>
-        </div>
-        </div>
-        <!------------------------------------------------------------------->
-    <div class="col-md-3 col-sm-6 col-lg-3">
-    <div class="table-responsive">
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <td class="tlt">Меню</td>
-                </tr>
-            </thead>
-        <tbody>
-        <tr>
-        <td>
-        <center><a href="{% url 'post_new' %}"><span class="glyphicon glyphicon-plus"></span>Добавить пост</a></center>
-        <center><a href="admin/"><span class="glyphicon glyphicon-cog"></span>Админ - панель</a></td></tr></center>
-        </tbody>
-        </table>
-        </div>
-        </div>
         </div>
         <center><div class="tlt">2017</div></center>
         </div>
