--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,17 +1,48 @@
-<html>
-    <head>
-        Страница в разработке
-    </head>
-    <body>
-    <div class="post">
-        {% if post.published_date %}
+{% extends 'blog/base.html' %}
+{% block content %}
+<div class="container">
+    <div class="row" style="width: 100%;">
+        <br>
+        <div class="col-md-4 col-sm-4 col-lg-11" style="width: 100%;">
+        <table class="table table-striped table-bordered">
+        <thead><tr><td class="success"><div class="post">
+        {{ post.title }}  <a style="float: right;" class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a></tr></td>
+        </thead>
+        <tbody>
+        <tr><td><p>{{ post.text|linebreaksbr }}</p></td></tr>
+        <tr><td class="success">{% if post.published_date %}
             <div class="date">
                 {{ post.published_date }}
             </div>
-        {% endif %}
-        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+        {% endif %}</td></tr>
+        </tbody>
+        </table>
+        </div>
+        </div>
+        <div class="row" style="width:100%;">
+        <div class="col-md-12">
+        <table class="table table-striped table-bordered table-condensed">
+    {% for comment in post.comments.all %}
+    {% if user.is_authenticated or comment.approved_comment %}
+    <div class="comment">
+        <thead>
+
+            <tr><td class="warning"><strong>Автор: {{ comment.author }}
+            {% if not comment.approved_comment %}
+                <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+                <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
+            {% endif %}</strong></td></tr></thead>
+        <tbody><p><tr><td class="comtxt">{{ comment.text|linebreaks }}</p></td></tr>
+        <tr><td class="info"><div class="date">Дата комментирования: {{ comment.created_date }}</div></tr></td>
+        {% endif %}</tbody>
     </div>
-</body>
-</html>
+{% empty %}
+    <p>Комментариев пока нет :(</p>
+{% endfor %}
+<a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
+</table>
+        </div>
+        </div>
+        </div>
+    </div>
+{% endblock %}
