--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,21 +1,16 @@
+{% extends 'blog/base.html' %}
 {% load staticfiles %}
-<html>
-    <head>
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
-    </head>
-    <body>
+{% block content %}
         <div class="container">
         <table class="table table-striped table-bordered">
-            <thead><tr><h1>Добавить новый пост</h1></tr></thead>
+            <br>
+            <thead><tr><td class="success"><h1>Редактирование/добавление поста</h1></tr></td></thead>
             <tbody>
             <tr><th><form method="POST" class="post-form">
                 {% csrf_token %}
                 {{ form.as_p }}</tr></th>
-            <tr><th><button type="submit" class="save btn btn-default">Запостить</button></tr></th>
+            <tr><td class="success"><button type="submit" class="save btn btn-default">Запостить</button></tr></td>
             </tbody>
             </table>
             </div>
-    </form>
-    </body>
-</html>
+{% endblock %}
