--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,80 +1,64 @@
-{% load staticfiles %}
-<html>
-
-    <head>
-        <title>Личный блог | Kiwich</title>
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
-            <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-            <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css">
-            <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-    <div class="container">
-    <div class="zg">
-        <center><a href="index/"><div class="zgtxt">Kiwich's blog</div></a></center>
-        <!--<center><img src="/static/11.png" alt="Пека"></center>-->
-    </div>
-    <div class="row">
-    <div class="col-md-3 col-sm-6">
+{% extends 'blog/base.html' %}
+{% block content %}
+<div class="container">
+    <div class="row" style="width: 100%;">
+        <div class="col-md-4 col-sm-4 col-lg-3">
     {% for post in posts %}
-    <div>
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
-                    <td class="tlt"><a style="color: #F2F2F2;" href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></td>
+                    <td style="border-radius:4px;" class="tlt"><a style="color: #F2F2F2;" href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></td>
                 </tr>
             </thead>
         <tbody>
-        <tr>
-        <th>
-        <p><div>{{ post.text|linebreaksbr }}</div></p></th></tr>
+        <tr><td><p><div>{{ post.text|linebreaksbr }}</div></p></td></tr>
         </tbody>
-        <tr><td class="dt">Опубликовано: {{ post.published_date }}</td></tr>
+        <tr><td style="border-radius:4px;" class="dt">Опубликовано: {{ post.published_date }}<br><a href="{% url 'post_detail' pk=post.pk %}">Посмотреть комментарии {{ post.approved_comments.count }}</a></td></tr>
         <br>
         </table>
-    </div>
     {% endfor %}
     </div>
     <br>
-    <div class="col-md-3 col-sm-6 col-lg-6">
+    <div class="col-md-4 col-sm-4 col-lg-6">
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
-                    <td class="tlt">О владельце блога</td>
+                    <td style="border-radius:4px;" class="tlt">О владельце блога</td>
                 </tr>
             </thead>
         <tbody>
         <tr>
-        <td>Меня зовут Максим и я являюсь участником хакатона от СФ БГУ.<br>Этот блог - мой первый опыт работы с Python и Django.</td></tr>
+        <td><center><img style="height:380px; border-radius:5px;" src="https://pp.userapi.com/c626822/v626822360/333bf/cl2rhPifXB0.jpg"></center><Br>Меня зовут Максим и я являюсь участником хакатона от СФ БГУ.<br>Этот блог - мой первый опыт работы с Python и Django.<br>Возможно, этот блог будет использоваться мной в дальнейшем для публикации каких-нибудь интересностей.<br>*Какой-то текст*</td></tr>
         </tbody>
         </table>
         </div>
         </div>
+
         <!------------------------------------------------------------------->
-    <div class="col-md-3 col-sm-6 col-lg-3">
+    <div class="col-md-4 col-sm-4 col-lg-3">
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
-                    <td class="tlt">Меню</td>
+                    <td style="border-radius:4px;" class="tlt">Меню</td>
                 </tr>
             </thead>
         <tbody>
         <tr>
-        <td>
-        <center><a href="{% url 'post_new' %}"><span class="glyphicon glyphicon-plus"></span>Добавить пост</a></center>
-        <center><a href="admin/"><span class="glyphicon glyphicon-cog"></span>Админ - панель</a></td></tr></center>
+        <td style="border-radius:4px;">
+        {% if user.is_authenticated %}
+            <center><a href="{% url 'post_new' %}"><span class="glyphicon glyphicon-plus"></span>Добавить пост</a></center>
+            <center><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-minus"></span>Разлогиниться</a></center>
+        {% else %}
+            <center><a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span>Залогиниться</a></center>
+        {% endif %}
+        <center><a href="admin/"><span class="glyphicon glyphicon-cog"></span>Админ - панель</a></center>
+        <center><a href="https://www.pythonanywhere.com/user/kiwich/consoles/"><span class="glyphicon glyphicon-wrench"></span>Pythonanywhere</a></td></tr></center>
         </tbody>
         </table>
         </div>
         </div>
-        </div>
-        <center><div class="tlt">2017</div></center>
-        </div>
-    </body>
-</html>
+    </div>
+    </div>
+    {% endblock %}
